# Prometheus

./: .gitattributes  .gitignore  LICENSE  README.md  RECOVERY_REPORT.md
edge-eval/: Cargo.toml
fincept-sidecar/: LICENSE  NOTICE  README.md  main.py  pyproject.toml
fincept-sidecar/agents/: README.md  __init__.py  asset_continuous.py  contract_tape.py  macro.py  news.py  orchestrator.py  technical.py
fincept-sidecar/fincept_sidecar/: __init__.py  app.py  schemas.py
fincept-sidecar/fincept_sidecar/engines/: market_data.py  tracker.py
fincept-sidecar/fincept_sidecar/routers/: agents.py  health.py  market.py
fincept-sidecar/scripts/: smoke_agents.py
fincept-sidecar/tests/: test_asset_signal.py  test_auth.py  test_handshake.py  test_macro.py  test_news_and_technical_null.py  test_schemas.py  test_technical_math.py  test_tracker.py
kalshi-monster/: AGENTS.md  PRIORITIES.md  README.md  ROADMAP.md
kalshi-monster/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.release.json
kalshi-monster/src-tauri/binaries/: README.md
kalshi-monster/src-tauri/capabilities/: default.json
kalshi-monster/src-tauri/icons/: icon.icns
kalshi-monster/src-tauri/src/: bankroll.rs  bot.rs  config.rs  correlation.rs  error.rs  eval_adapter.rs  integration_secrets.rs  lib.rs  line_tracker.rs  main.rs  ml_predictor.py  ml_predictor.rs  notification.rs  prizepicks.rs  secrets.rs  weather.rs
kalshi-monster/src-tauri/src/analysis/: calibration.rs  calibrator.json  context.rs  edge_calculator.rs  matchup_analyzer.rs  mod.rs  parlay_correlation.rs  prop_scorer.rs
kalshi-monster/src-tauri/src/chat/: agent_priors.rs  decision_extract.rs  decision_schema.rs  enhanced_prompt.rs  fincept_context.rs  kalshi_context.rs  market_gate.rs  mod.rs  openrouter.rs  session.rs  track_record.rs  web_context.rs
kalshi-monster/src-tauri/src/commands/: analysis_engine.rs  bot.rs  breakers.rs  chat.rs  config.rs  fincept.rs  kalshi_analysis.rs  kalshi_markets.rs  kalshi_paper.rs  mod.rs  notifications.rs  predictions.rs  shared.rs  sports.rs
kalshi-monster/src-tauri/src/edge_engine/: breakers.rs  calibration.rs  execution_guard.rs  mod.rs  opinion_input.rs  paper_breaker.rs  persistence.rs  pipeline.rs
kalshi-monster/src-tauri/src/fincept_bridge/: mod.rs
kalshi-monster/src-tauri/src/football/: api_client.rs  data.rs  injector.rs  live_data.rs  mod.rs  player_stats.rs
kalshi-monster/src-tauri/src/kalshi/: client.rs  forecast.rs  grading.rs  market_cache_store.rs  mod.rs  models.rs  portfolio_risk.rs  price_tracker.rs  ticker.rs
kalshi-monster/src-tauri/src/paper/: mod.rs
kalshi-monster/src-tauri/src/predictions/: grading.rs  mod.rs  storage.rs  tracker.rs
monster-edge-core/: Cargo.toml
scripts/: _grade_latest.py  _grade_pending_kalshi.py  build_fincept_sidecar.py  edge_autopsy.py  grading_common.py  kalshi_ticker.py  kb1_calibration_verify.py  live_forecast_pipeline.py  (+12 more)
(+71 files in other folders)
